Fix increased visibility overriding highlighting
When User A mentions User B and User B tagged User A with a color, User
A's message should be highlighted, even if User B has "increased
visibility of tagged users" enabled.

--- a/assets/chat/css/messages/modifiers/_highlight.scss
+++ b/assets/chat/css/messages/modifiers/_highlight.scss
@@ -9,7 +9,3 @@
     color: a.$color-chat-text3;
   }
 }
-
-.pref-taggedvisibility .msg-tagged {
-  background-color: a.$color-chat-highlight;
-}
